# notebook-template

./: .gitignore  README.md
docs/: README.md
notebooks/: arcgis_arcpy_examples.ipynb  arcpy_examples.ipynb
scripts/: init_repo.sh
src/: arcpy_helpers.py  enums.py  main.py  pyproject.toml
